<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".RegisterActivity"
    android:background="@drawable/background_degrade">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/username"
        style="@style/redeFormEditText"
        android:layout_margin="10dp"
        android:hint="@string/usu_rio"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/fullname"
        style="@style/redeFormEditText"
        android:layout_margin="10dp"
        android:hint="@string/nome"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/email"
        style="@style/redeFormEditText"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/password"
        style="@style/redeFormEditText"
        android:layout_margin="10dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_botao"
        android:text="Registrar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/j_tem_uma_conta_entrar"
        android:textColor="#FFFFFF" />

</LinearLayout>