<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/email"
        style="@style/redeFormEditText"
        android:layout_margin="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/password"
        style="@style/redeFormEditText"
        android:layout_margin="15dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_botao"
        android:padding="10dp"
        android:text="@string/entrar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registre_se"
        android:textColor="#FFFFFF" />

</LinearLayout>